@@ -1,5 +1,14 @@
 2015-09-08  Edward Jones  <ed.jones@embecosm.com>
 
+	* include/mageec/DatabaseQuery.h
+	(DatabaseQueryIterator::isNull): Added method to check if a result
+	column is of null type.
+	(DatabaseQuery::operator<<): Add method to bind a null parameter.
+	* lib/DatabaseQuery.cpp (DatabaseQueryIterator::isNull)
+	(DatabaseQuery::operator<<): Added implementations.
+
+2015-09-08  Edward Jones  <ed.jones@embecosm.com>
+
 	* include/mageec/Database.h (Database::newCompilation): Added
 	optional pass_sequence and parent parameters.
 	* lib/Database.cpp (create_compilation_table): pass_sequence_id
